--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>Full-Stack (MERN) Web Developer &nbsp;&bull;&nbsp; Industrial Engineering and Business background &nbsp;&bull;&nbsp; Atlanta, GA.</p>
 						<nav>
 							<ul>
-								<li><a href="https://twitter.com/BanesaGuaderram" target='_blank' class="icon fa-x-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://twitter.com/BanesaGuaderram" target='_blank' class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/banesaguaderrama/" target='_blank' class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://stackoverflow.com/users/10316379/banesa-guaderrama?tab=profile" target='_blank' class="icon fa-stack-overflow"><span class="label">Stackoverflow</span></a></li>
 								<li><a href="https://github.com/BanesaG" target='_blank' class="icon fa-github"><span class="label">Github</span></a></li>
